scratch/err2.txt
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
[DEBUG parseFuncDecl] nameToken=mkdtemp, peek()==, type=168
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
[DEBUG parseFuncDecl] nameToken=tmpfile, peek()==, type=168
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
[DEBUG parseFuncDecl] nameToken=tmpnam, peek()==, type=168
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
[1mscratch/tmpfile2.npk:48:1: [0m[1;31merror[0m: [1m  Expected expression, found '}'. Possible extra closing brace or empty block
  Found: token '}'[0m
   48 | };
        [1;32m^[0m

